# github_actions_CI_CD

./: .gitignore  README.md  TrainChurnModel.ipynb  fly.toml  metrics.json  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: deploy-api.yaml  train-model.yaml
models/: .gitignore  clf-model.joblib  clf-model.joblib.dvc
models/drift_detector/: config.toml  x_ref.npy
models/drift_detector/preprocess_fn/: function.dill
notebooks/: DriftDetection.ipynb  TestAPI.ipynb  TrainChurnModel.ipynb  TrainChurnModel_refactor.ipynb
reports/: feat_imp.csv
src/app/: main.py
src/stages/: data_split.py  drift_detector.py  eval.py  train.py
